<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.sofabuffers</groupId>
  <!-- Registry/artifact coordinate is org.sofabuffers:corelib (§6); the Java namespace stays org.sofabuffers.sofab. -->
  <artifactId>corelib</artifactId>
  <!-- 0.9.0: source-breaking. writeSequenceBegin was removed in favour of the
       writeSequenceBeginLazy / writeSequenceEnd / writeSequenceEndKeep trio, and
       the public LAZY_SEQ_DEPTH constant is gone. Pre-1.0, the minor is where a
       breaking change lands. Sofab.API_VERSION is the WIRE contract and stays 1:
       the bytes are unchanged, only which of them a sparse encoder emits. -->
  <version>0.10.0</version>
  <packaging>jar</packaging>

  <name>SofaBuffers CoreLib (Java)</name>
  <description>Dependency-free, allocation-light, streaming Java implementation of the SofaBuffers (Sofab) serialization format.</description>
  <url>https://github.com/sofa-buffers/corelib-java</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <junit.version>6.1.3</junit.version>
    <gson.version>2.14.0</gson.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <!-- Test-only: parse the shared assets/test_vectors.json conformance suite.
         Gson preserves exact precision for unsigned u64 values via getAsBigInteger().
         The runtime library stays dependency-free. -->
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <finalName>sofab</finalName>
    <!-- Put the shared conformance vectors on the test classpath straight from
         assets/ (single source of truth, copied verbatim from the documentation repo). -->
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>
      </testResource>
      <testResource>
        <directory>assets</directory>
        <includes>
          <include>test_vectors.json</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.15.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.6</version>
      </plugin>
      <!-- Code coverage: produces target/site/jacoco/jacoco.xml during `mvn verify`. -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.8.15</version>
        <configuration>
          <!-- Benchmark tools are runnable mains, not unit-tested library code. -->
          <excludes>
            <exclude>org/sofabuffers/sofab/bench/**</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>verify</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!-- API documentation: `mvn javadoc:javadoc` -> target/reports/apidocs. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <source>${maven.compiler.release}</source>
          <doctitle>SofaBuffers Java ${project.version}</doctitle>
          <windowtitle>SofaBuffers Java ${project.version}</windowtitle>
          <quiet>true</quiet>
          <notimestamp>true</notimestamp>
          <!-- Benchmark tools are runnable mains, not part of the public API. -->
          <excludePackageNames>org.sofabuffers.sofab.bench</excludePackageNames>
        </configuration>
      </plugin>
      <!--
        Run the benchmark tools, e.g.:
          mvn -q compile exec:java -Dexec.mainClass=org.sofabuffers.sofab.bench.Perf
          mvn -q compile exec:java -Dexec.mainClass=org.sofabuffers.sofab.bench.Bench
      -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.6.3</version>
        <configuration>
          <classpathScope>compile</classpathScope>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
